Добавлен эндпоинт [GET] /me
